portico-pages: Fix flex height issues with content.
This fixes the existing issue where the titles of content is chopped
off when the screen height is too small.

--- a/static/styles/portico-signin.css
+++ b/static/styles/portico-signin.css
@@ -125,7 +125,6 @@ html {
 
 .forgot-password-container {
     width: 503px;
-    margin-top: calc(50vh - 150px);
 }
 
 .forgot-password-container form {
@@ -359,14 +358,9 @@ html {
 }
 
 .new-style .get-started {
-    height: 0px;
-    margin: 0px;
-
     font-size: 2.5rem;
     text-align: center;
     color: #666;
-
-    transform: translateY(-90px);
 }
 
 .new-style button {
@@ -740,10 +734,6 @@ button.login-google-button {
 
     .split-view .right-side {
         width: 324px;
-    }
-
-    .new-style .get-started {
-        transform: translateY(-70px);
     }
 }
 
